explanation of sample and population std

--- a/lu5-basic-stats/lu5-examples.ipynb
+++ b/lu5-basic-stats/lu5-examples.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this we can use the `mode`. The mode is just the most frequent number in a set. "
+    "For this we can use the `mode`. The mode is the most frequently appearing value in a population or sample. "
    ]
   },
   {
@@ -460,16 +460,15 @@
    "source": [
     "The standard deviation is a numerical value used to indicate how widely individuals in a group vary. If individual observations vary greatly from the group mean, the standard deviation is big; and vice versa.\n",
     "\n",
-    "It is important to distinguish between the standard deviation of a population and the standard deviation of a sample. They have different notation, and they are computed differently. The standard deviation of a population is denoted by `σ` and the standard deviation of a sample, by `s`.\n",
+    "It is important to distinguish between the standard deviation of a population and the standard deviation of a sample. They have different notation, and they are computed differently. The standard deviation of a population is denoted by `σ` and the standard deviation of a sample, by `s`. \n",
     "\n",
-    "The standard deviation is equal to the square root of the variance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As you can see below, the variance it's not so intuitive. This is because it's expressed in different units that the mean and it becomes harder for us to understand the dispersion"
+    "Because the observed values fall, on average, closer to the **sample mean** than to the **population mean**, the standard deviation which is calculated using deviations from the sample mean underestimates the desired standard deviation of the population. For this reason, when calculating for a sample, we divide by `n-1`.\n",
+    "\n",
+    "The standard deviation is equal to the square root of the variance. Below is the formula of the variance for a sample:\n",
+    "\n",
+    "$$ s^2 = \\frac{\\sum (x - \\mu )^2}{n-1} $$\n",
+    "\n",
+    "$$ \\mu - mean $$"
    ]
   },
   {
