--- a/lu5-basic-stats/lu5-examples.ipynb
+++ b/lu5-basic-stats/lu5-examples.ipynb
@@ -541,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -749,6 +751,13 @@
    ],
    "source": [
     "lego.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequency tables"
    ]
   },
   {
