--- a/lu5-basic-stats/lu5-examples.ipynb
+++ b/lu5-basic-stats/lu5-examples.ipynb
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The standard deviation is a numerical value used to indicate how widely individuals in a group vary. If individual observations vary greatly from the group mean, the standard deviation is big; and vice versa.\n",
+    "The standard deviation measures the dispersion of the data in terms of the mean.\n",
     "\n",
     "It is important to distinguish between the standard deviation of a population and the standard deviation of a sample. They have different notation, and they are computed differently. The standard deviation of a population is denoted by `σ` and the standard deviation of a sample, by `s`. \n",
     "\n",
